turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:18: error: type mismatch;
 found   : Unit
 required: Int
	var k : Int = PosCouleur(getCouleurSol(),colors) 
                                ^LangtonsAnt:20: error: not found: value R
		case R	=> setCouleurSol(colors(k));droite();avance()
                     ^LangtonsAnt:21: error: not found: value L
		case L =>  setCouleurSol(colors(k));gauche();avance()
                     ^